# TorbuQuant

./: .gitignore  README.md  design_system.md  mkdocs.yml  pyproject.toml  test.ipynb
.github/workflows/: docs.yml  publish.yml  workflow.yml
benchmarks/: validation_run.py
docs/: algorithms.md  architecture.md  cli.md  configuration.md  contributing.md  design.md  developer.md  faq.md  formats.md  github-pages.md  index.md  install.md  limits.md  math.md  modules.md  performance.md  quickstart.md  troubleshooting.md  vllm_reference_audit.md
docs/api/: attention.md  bench.md  core.md  index.md  integration.md  kv.md  packing.md  quality.md  search.md  triton.md  weights.md
docs/usage/: huggingface.md  index.md  qwen-ab.md  vllm-fp8-turboquant.md  vllm.md
reports/: phase2_real_data_check.json  phase3_real_data_check.json  phase4_real_data_check.json  phase5_real_data_check.json  phase6_real_data_check.json  phase7_real_data_check.json  validation_run.json
scripts/: generate_vllm_metadata.py  phase2_real_data_check.py  phase3_real_data_check.py  phase4_real_data_check.py  phase5_real_data_check.py  phase6_real_data_check.py  phase7_real_data_check.py  qwen_ab_eval.py  qwen_activation_capture.py  verify_vllm_integration.py  vllm_fp8_tq_bench.py  vllm_run_report.py
site/: .nojekyll  404.html  index.html  objects.inv  sitemap.xml
site/algorithms/: index.html
site/api/: index.html
site/architecture/: index.html
site/cli/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/design/: index.html
site/developer/: index.html
site/faq/: index.html
site/formats/: index.html
site/github-pages/: index.html
site/install/: index.html
site/limits/: index.html
site/math/: index.html
site/modules/: index.html
site/performance/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/usage/: index.html
site/vllm_reference_audit/: index.html
tests/: test_attention_reference.py  test_bench_external.py  test_bench_profile.py  test_core_codebook.py  test_core_mse.py  test_core_outlier.py  test_core_qjl_prod.py  test_core_rotation.py  test_core_types.py  test_hf_dynamic_cache.py  test_integration_phase7.py  test_kv_cache_policy.py  test_kv_formats_values.py  test_kv_memory.py  test_packing_bits.py  test_quality_metrics.py  test_quality_prompts.py  test_quality_retrieval_niah.py  test_quality_trajectory.py  test_triton_kernels.py  test_vllm_calibration.py  test_vllm_fp8_tq_bench.py  test_vllm_page_cache.py  test_vllm_recipe.py  test_vllm_reference_audit.py  test_vllm_run_report.py  test_vllm_runtime.py  test_vllm_tq4_decode.py  test_vllm_tq4_update.py  test_vllm_verify.py
torbuquant/attention/: reference.py
torbuquant/bench/: __init__.py  external.py
torbuquant/core/: codebook.py  outlier.py  qjl.py  rotation.py  types.py
torbuquant/kv/: compressors.py  keys.py  recent.py  values.py
torbuquant/packing/: bits.py
torbuquant/quality/: composite.py  kld.py  prompts.py  retrieval.py
torbuquant/search/: __init__.py  functional.py
turboquant/: __init__.py
(+195 files in other folders)
